// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorIndicator matches snapshot (checked) 1`] = `
<div
  className="ColorIndicator-sc-1w5zl7g-2 dojCyw"
>
  <svg
    aria-hidden="true"
    className="StyledIconBase-sc-ea9ulj-0 gWDkVc ColorIndicator__CheckIcon-sc-1w5zl7g-0 Lufbl"
    fill="currentColor"
    focusable="false"
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M470.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L192 338.7l233.4-233.3c12.5-12.5 32.8-12.5 45.3 0z"
      fill="currentColor"
    />
  </svg>
  <span
    className="ColorIndicator__FocusedStyle-sc-1w5zl7g-1 gcsHaO"
    style={
      Object {
        "focused": "#fed200",
        "label": "yellow",
        "passive": "#ffff8a",
      }
    }
  />
</div>
`;

exports[`ColorIndicator matches snapshot 1`] = `
<div
  className="ColorIndicator-sc-1w5zl7g-2 HsETE"
>
  <svg
    aria-hidden="true"
    className="StyledIconBase-sc-ea9ulj-0 gWDkVc ColorIndicator__CheckIcon-sc-1w5zl7g-0 Lufbl"
    fill="currentColor"
    focusable="false"
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M470.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L192 338.7l233.4-233.3c12.5-12.5 32.8-12.5 45.3 0z"
      fill="currentColor"
    />
  </svg>
  <span
    className="ColorIndicator__FocusedStyle-sc-1w5zl7g-1 gcsHaO"
    style={
      Object {
        "focused": "#fed200",
        "label": "yellow",
        "passive": "#ffff8a",
      }
    }
  />
</div>
`;
